--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "start":"node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "12.13.0"
+  },
   "author": "kaline",
   "license": "ISC"
 }
