--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": https://github.com/kaline/DonaDoceStatic"
+    "url": "https://github.com/kaline/DonaDoceStatic"
   }
 }
