--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "donadocecss",
+  "name": "DonaDoceStatic",
   "version": "1.0.0",
   "description": "<hr>\r <img src=\"imagens/Cartao.jpg\">",
   "main": "app.js",
